src/styles/home.css
.hero-div{
  background-image: url(../assets/HeroImg.jpg);
  height: 600px;
  width: 100%;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}
.logo {
  margin: 0;
  padding: 10px 10px 10px 10px;
  align-self: flex-start;
}
.header{
  display: flex;
  flex-direction: column;
}
.contact-link{
  align-self: flex-end;
  justify-self: flex-end;
  margin: 25px;
  margin-top: -43px;
  text-decoration: none;
  cursor: pointer;
}
.project-link{
  align-self: flex-end;
  justify-self: flex-end;
  margin: 25px;
  margin-top: -44px;
  margin-right: 128px;
  cursor: pointer;
}
.about-link{
  align-self: flex-end;
  justify-self: flex-end;
  margin: 25px;
  margin-top: -44px;
  margin-right: 235px;
  cursor: pointer;
}
.hunter-hero{
  height: 200px;
  border-radius: 100px;
  margin-top: 40px;
}
.hero-text{
  align-self: center;
  width: 80vw;
  margin: 80px 10% 0 10%;
  background-color: #ffffff;
  border: 1px solid rgb(118, 118, 118);
  opacity: 0.6;
  border-radius: 12px;
  box-shadow:
    0 10px 30px -12px rgba(0,0,0,.42),
    0 4px 25px 0px rgba(0,0,0,.12),
    0 8px 10px -5px rgba(0,0,0,.2)
}
.about-me-div{
  background-color: rgb(0, 0, 0);
  height: 500px;
  color: white;
  width: 100%;
}
.intro-h1{
  margin: 0;
  width: 80%;
  padding: 40px 10% 0 10%;
  line-height: 1.6;
}
.tech-skills{
  height: auto;
  background-color: white;
  padding-left: 80px;
  padding-right: 80px;
  width: 80;
  margin: -130px 10vw 0 10vw;
  border: 1px solid rgb(172, 172, 172);
  border-radius: 12px;
  box-shadow:
    0 10px 30px -12px rgba(0,0,0,.40),
    0 4px 25px 0px rgba(0,0,0,.40),
    0 8px 10px -5px rgba(0,0,0,.40);
}
a {
  /* text-decoration: none; */
  color: black;
}
.project-header{
  margin-top: 90px;
}
.project-img{
  width: 300px;
}
.project-div{
  text-decoration: none;
  width: 60%;
  max-width: 400px;
  padding-left: 40px;
  padding-right: 40px;
  margin: 25px 10px 0 10px;
  border: 1px solid rgb(172, 172, 172);
  border-radius: 12px;
  box-shadow:
    0 10px 30px -12px rgba(0,0,0,.40),
    0 4px 25px 0px rgba(0,0,0,.40),
    0 8px 10px -5px rgba(0,0,0,.40);
  flex-wrap: wrap;
}
.project-link{
  text-decoration: none;
  width: 60;
}
.project-flex{
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  margin-bottom: 50px;
}
.footer{
  margin-bottom: 50px;
  margin-top: 40px;
}
.project-buttons{
  margin-bottom: 20px;
}
.contact-mini{
  text-decoration: underline;
  cursor: pointer;
}
@media only screen and (max-width: 600px) {
  .tech-skills {
    margin: -30px 10vw 0 10vw;
    padding-left: 20px;
    padding-right: 20px;
  }
  .intro-h1 {
    margin: 0;
    width: 90%;
    padding: 20px 5% 0 5%;
    line-height: 1.6;
  }
  .project-img{
    width: 200px;
  }
}

